kubernetes/apps/kube-system/cilium/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 10.10.10.10
  name: external-kube-apiserver
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerClass: io.cilium/bgp-control-plane
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
