kubernetes/apps/kube-system/cilium/config/gateway.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.kantai.xyz"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: xyz-kantai-production-tls
            namespace: ingress-certificates
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    # NOTE: external-dns target for routes using this gateway; sends traffic to CF tunnel
    external-dns.alpha.kubernetes.io/target: external.kantai.xyz
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.kantai.xyz"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: xyz-kantai-production-tls
            namespace: ingress-certificates
